# rust-study

./: Cargo.toml  README.md
src/closure/: main.rs
src/enum_basic/: main.rs
src/enum_data/: main.rs
src/function_pointer/: main.rs
src/map/: main.rs
src/map_error/: main.rs
src/map_option/: main.rs
src/map_result/: main.rs
src/module/: main.rs  my_module.rs
src/module/second_mod/: mod.rs  sec_mod_file.rs
src/option_enum/: main.rs
src/ownership_move/: main.rs
src/question/: main.rs
src/result_enum/: main.rs
src/result_noreturn/: main.rs
src/struct/: main.rs
src/struct_define/: main.rs
src/struct_method/: main.rs
src/trait/: main.rs
src/trait_clone/: main.rs
src/trait_display_debug/: main.rs
src/try_operator/: main.rs
