[package]
name = "my-rust-book"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "ownership_move"
path = "src/ownership_move/main.rs"

[[bin]]
name = "struct"
path = "src/struct/main.rs"

[[bin]]
name = "struct_define"
path = "src/struct_define/main.rs"

[[bin]]
name = "struct_method"
path = "src/struct_method/main.rs"
