[package]
name = "my-rust-book"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "ownership_move"
path = "src/ownership_move/main.rs"

[[bin]]
name = "struct"
path = "src/struct/main.rs"

[[bin]]
name = "struct_define"
path = "src/struct_define/main.rs"

[[bin]]
name = "struct_method"
path = "src/struct_method/main.rs"

[[bin]]
name = "enum_basic"
path = "src/enum_basic/main.rs"

[[bin]]
name = "enum_data"
path = "src/enum_data/main.rs"

[[bin]]
name = "result_enum"
path = "src/result_enum/main.rs"

[[bin]]
name = "result_noreturn"
path = "src/result_noreturn/main.rs"

[[bin]]
name = "option_enum"
path = "src/option_enum/main.rs"

[[bin]]
name = "try_operator"
path = "src/try_operator/main.rs"

[[bin]]
name = "question"
path = "src/question/main.rs"

[[bin]]
name = "function_pointer"
path = "src/function_pointer/main.rs"

[[bin]]
name = "closure"
path = "src/closure/main.rs"

[[bin]]
name = "map"
path = "src/map/main.rs"

[[bin]]
name = "map_option"
path = "src/map_option/main.rs"

[[bin]]
name = "map_result"
path = "src/map_result/main.rs"

[[bin]]
name = "map_error"
path = "src/map_error/main.rs"

[[bin]]
name = "module"
path = "src/module/main.rs"

[[bin]]
name = "trait"
path = "src/trait/main.rs"

[[bin]]
name = "trait_display_debug"
path = "src/trait_display_debug/main.rs"

[[bin]]
name = "trait_clone"
path = "src/trait_clone/main.rs"